[package]
name = "helm-linter"
version = "0.1.0"
authors = ["Arash Outadi <arash.out@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtmpl = {git="https://github.com/arashout/gtmpl-rust"}
yaml-rust = "0.4.3"